# dovecot-pop-uidl-proxy

./: 1SYNC.sh  BUILD.sh  ChangeLog  README.md  config.h.in  configure  configure.ac
doc/wiki/: ACL.txt  AixPluginsSupport.txt  AuthDatabase.CheckPassword.txt  AuthDatabase.Dict.txt  AuthDatabase.LDAP.AuthBinds.txt  AuthDatabase.LDAP.PasswordLookups.txt  AuthDatabase.LDAP.Userdb.txt  AuthDatabase.LDAP.txt  AuthDatabase.Passwd.txt  AuthDatabase.PasswdFile.txt  AuthDatabase.SQL.txt  AuthDatabase.VPopMail.txt  AuthDatabase.txt  Authentication.Caching.txt  Authentication.Kerberos.txt  Authentication.MasterUsers.txt  Authentication.Mechanisms.DigestMD5.txt  Authentication.Mechanisms.NTLM.txt  Authentication.Mechanisms.Winbind.txt  Authentication.Mechanisms.txt  Authentication.MultipleDatabases.txt  Authentication.PasswordSchemes.txt  Authentication.Penalty.txt  Authentication.RestrictAccess.txt  Authentication.txt  BasicConfiguration.txt  Chrooting.txt  Clients.NegativeUIDs.txt  Clients.txt  CompilingSource.txt  Debugging.Authentication.txt  Debugging.ProcessTracing.txt  Debugging.Rawlog.txt  Debugging.Thunderbird.txt  Design.Arrays.txt  Design.AuthProcess.txt  Design.AuthProtocol.txt  Design.Buffers.txt  Design.Code.txt  Design.DoveadmProtocol.txt  (+193 more)
src/auth/: auth-request.c  auth-request.h  auth-settings.c  auth-settings.h  db-checkpassword.c
src/plugins/: Makefile.am  (+1 more)
src/plugins/pop3-uidl-proxy/: Makefile.am  Makefile.in  pop3-uidl-proxy-plugin.c  pop3-uidl-proxy-plugin.h
src/plugins/pop3-uidl-proxy/database-handling/: createDB.sh  createDB.sql  fillDB.sql  queryDB.sql
(+18 files in other folders)
